--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ code {
 }
 
 .header{
-  background: linear-gradient(45deg, black, gray);
+  background: linear-gradient(45deg, #2e4e82, gray);
   height: 8%;
 }
 
