--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@ code {
 }
 
 .container{
+  margin-top: 6%;
+  margin-left: 10%;
+  margin-right: 10%;
+  height: 100%;
+}
+
+.containerImageList{
+  margin-top: 2%;
   margin-left: 10%;
   margin-right: 10%;
   height: 100%;
