--- a/src/index.css
+++ b/src/index.css
@@ -1,57 +1,64 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.container{
-  margin-top: 6%;
-  margin-left: 10%;
-  margin-right: 10%;
-  height: 100%;
+.container {
+    margin-top: 6%;
+    margin-left: 10%;
+    margin-right: 10%;
+    height: 100%;
 }
 
-.containerImageList{
-  margin-top: 2%;
-  margin-left: 10%;
-  margin-right: 10%;
-  height: 100%;
+.user-page-container {
+    background: linear-gradient(rgba(141, 153, 174, 0.5), rgba(141, 153, 174, 0.3)), url(assets/img/bg1.png);
 }
 
-.main{
-  margin-left: 10%;
-  margin-right: 10%;
+.containerImageList {
+    margin-top: 1%;
+    margin-left: 10%;
+    margin-right: 10%;
+    height: 100%;
 }
 
-.search{
-  text-decoration: none;
-  border-radius: 25px;
+.main {
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
-.header, .footer{
-  background: rgba(21,21,23,.95)!important;
-  box-shadow: 1px 1px 50px 3px #888888 !important;
+.search {
+    text-decoration: none;
+    border-radius: 25px;
 }
 
-.header input{
-  font-size: 0.9em;
+.header, .footer {
+    background: rgba(21, 21, 23, .95) !important;
 }
 
-.main-container{
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+.header{
+    box-shadow: 1px 1px 50px 3px #888888 !important;
+}
+
+.header input {
+    font-size: 0.9em;
+}
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .app-logo img {
-  height: 35px;
+    height: 35px;
 }
