--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Niramit');
+
 body {
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    font-family: Niramit, sans-serif !important;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -45,7 +45,7 @@ code {
     background: rgba(21, 21, 23, .95) !important;
 }
 
-.header{
+.header {
     box-shadow: 1px 1px 50px 3px #888888 !important;
 }
 
