--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -74,6 +74,5 @@ iframe{
 
 #img-uploader{
     padding: 0 20%;
-    background-image: linear-gradient(to left bottom, #8d9fb1, #9ba5b3, #a7abb5, #b1b2b7, #b9b9b9);
-    /*background-color: #8D9FB1;*/
+    background: linear-gradient(0deg,rgba(0,0,0,0) 50%,rgba(0,0,0,.5) 100%),radial-gradient(50% 120%,rgba(0,0,0,0) 50%,rgba(0,0,0,.7) 100%), url(./assets/img/bg2.jpeg);
 }
