--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -124,10 +124,35 @@ code {
     font-size: 0.9em;
 }
 
+.footer{
+    padding: 10px 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+}
+
+.footer a{
+    margin-left: 25px;
+}
+
+.footer > div{
+    display: flex;
+    align-items: center;
+}
+
+.footer svg{
+    color: white;
+    font-size: 1.3em;
+}
+
 .main-container {
     display: flex;
     flex-direction: column;
     height: 100%;
+    justify-content: space-between;
+    align-content: space-between;
 }
 
 .app-logo img {
@@ -248,7 +273,7 @@ iframe {
 }
 
 .scroll-button{
-    bottom: 75px!important;
+    bottom: 60px!important;
     width: 38px!important;
     height: 38px!important;
     border: none!important;
@@ -285,4 +310,14 @@ iframe {
 .nav-actions svg{
     color: white;
     font-size: 1.1em;
+}
+.post-summary{
+    display: flex;
+    font-size: 0.8em;
+    color: #b3b3b3;
+    font-weight: 600;
+}
+
+.post-summary > span{
+    margin-left: 10px;
 }
